fixed yaml but need to refactor endpoints still
